Bug 335453 - The filter is hidden when a new chat is started
Summary: The filter is hidden when a new chat is started
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.8.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-28 07:46 UTC by xdmx
Modified: 2014-06-25 13:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description xdmx 2014-05-28 07:46:22 UTC
I have the filter enabled and when I start a new chat (clicking 2 times on the contact and/or once on the chat icon) the filter is hidden

Reproducible: Always

Steps to Reproduce:
1. Enable the filter
2. Double click on a contact
Actual Results:  
The filter field is hidden

Expected Results:  
It should stay enabled
Comment 1 David Edmundson 2014-05-31 12:43:05 UTC
This was added as a feature upon request, the logic being once you've searched for someone and started a chat, you've done the operation you filtered for, you're not going to want to stay in a search mode.

Can you give a counter argument?
Comment 2 xdmx 2014-06-04 13:42:30 UTC
Hi David, I personally always have the filter enabled, because it's useful to see if someone is online and/or to quickly start a chat (a part using krunner). I find it quite frustrating having to click the filter button, search for someone, start a chat, then click again the filter button, search and start another chat. I think the best way would be simply to reset the search/filter once a chat is started, but without disabling the filtering.

This is also how dolphin works, you have the filter enabled, you filter for something, click on a folder, the filter/search is reset, but it's kept enabled
Comment 3 David Edmundson 2014-06-04 13:43:45 UTC
So clear the text, but not hide the bar?
Comment 4 xdmx 2014-06-05 20:49:42 UTC
Yes, I think it'd bring a better user experience, what do you think?
Comment 5 Christoph Feck 2014-06-22 16:55:14 UTC
David, does comment #4 provide the requested information? Please set the bug status.
Comment 6 David Edmundson 2014-06-22 21:45:24 UTC
Christoph, oops thanks!

xdmx, ok, sounds like a plan: Let me check with our usability guy, and then we'll do this.
Comment 7 Thomas Pfeiffer 2014-06-22 21:50:30 UTC
Yes, this would be the way to go! We're currently still figuring out the distinction between "static" filter bars (those which can only be switched on and off via a menu item and are on by default) and "dynamic" filter bars (which can be brought up by a shortcut and close with esc. or a close button in the bar). KTp's filter bar would be a "dynamic" one, and as such it should behave similarly to the one in Dolphin (clear, but not disappear upon context change).
Comment 8 David Edmundson 2014-06-25 13:19:35 UTC
Fixed by 49948a63dadfb9a0b5dec4de173c0b74c874cad1