Clear filter bar rather than hide on starting action

BUG: 335453
REVIEW: 118890
FIXED-IN: 0.9.0